# rag-small

./: .env.example  .gitignore  ARCHITECTURE.md  PROMPT_FIX_CONTEXT_HANDLING.md  RagSmallBuild.md  USER_TASKS.md  app.py  pyproject.toml  requirements.txt  supabase-setup.sql
.claude/: MEMORY.md
docs/: CODE_READING_GUIDE.md  LEARNING_ROADMAP.md  RAG_SKILL_ROADMAP.md  test.md
lib/: chat.py  embedding_pipeline.py  evaluator.py  graph.py  llm.py  rag_chain.py  supabase_client.py
tests/: conftest.py  test_app.py  test_embedding_pipeline.py  test_evaluator.py  test_graph.py  test_llm.py  test_rag_chain.py  test_supabase_client.py
